--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web Components</title>
+    <script src="tooltip.js"></script>
 </head>
 <body>
-
+    <p><pb-tooltip text="Web Components is a set of standards.">Web Components</pb-tooltip> are awesome!!</p>
+    <pb-tooltip>Here we go!</pb-tooltip>
 </body>
 </html>
